force-app/main/default/objects/Deployment_Component__c/Deployment_Component__c.object-meta.xml
<CustomObject>
    <label>Deployment Component</label>
    <nameField>
        <displayFormat>DC-{0000000}</displayFormat>
        <label>Component Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>