force-app/main/default/objects/Deployment_Component__c/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <label>Component Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>