force-app/main/default/objects/Deployment_Component__c/fields/Deployment_Package__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Package__c</fullName>
    <label>Deployment Package</label>
    <referenceTo>Deployment_Package__c</referenceTo>
    <relationshipLabel>Deployment Components</relationshipLabel>
    <relationshipName>Deployment_Components</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>