force-app/main/default/objects/Deployment_Component__c/fields/Source_Org__c.field-meta.xml
<CustomField>
    <fullName>Source_Org__c</fullName>
    <label>Source Org</label>
    <length>255</length>
    <type>Text</type>
</CustomField>